1st Dashboard tests

--- a/Results/report.html
+++ b/Results/report.html
@@ -1557,25 +1557,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,48478],[],[[4,0,1,0,[],[1,12591,12242],[]],[5,0,1,0,[],[1,24834,4179],[]],[6,0,1,0,[],[1,29013,17644],[]]],[],[3,3,3,3]];
+window.output["suite"] = [1,2,3,0,[],[1,0,29192],[],[[4,0,1,0,[],[1,12807,14573],[]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Loginsuite","*C:\\Users\\dpgn7791\\PycharmProjects\\AirBoxAutomation\\loginsuite.robot","*../loginsuite.robot","*Login Failed","*Login as Guest","*Login success"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Dashboardsuite","*C:\\Users\\dpgn7791\\PycharmProjects\\AirBoxAutomation\\Dashboardsuite.robot","*../Dashboardsuite.robot","*Check connection type"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:34","fail":0,"label":"Critical Tests","pass":3},{"elapsed":"00:00:34","fail":0,"label":"All Tests","pass":3}],[],[{"elapsed":"00:00:48","fail":0,"id":"s1","label":"Loginsuite","name":"Loginsuite","pass":3}]];
+window.output["stats"] = [[{"elapsed":"00:00:15","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:15","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:29","fail":0,"id":"s1","label":"Dashboardsuite","name":"Dashboardsuite","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1474552574901;
+window.output["baseMillis"] = 1474562255264;
 </script>
 <script type="text/javascript">
-window.output["generatedMillis"] = 48099;
+window.output["generatedMillis"] = 28736;
 </script>
 <script type="text/javascript">
-window.output["generatedTimestamp"] = "20160922 15:57:03 GMT +03:00";
+window.output["generatedTimestamp"] = "20160922 18:38:04 GMT +03:00";
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
